fixed incorrect contrast ratio for text

--- a/style.css
+++ b/style.css
@@ -792,12 +792,12 @@ h4 {
 }
 
 .tc-white {
-    color: #364577!important;
+    color: #ffff!important;
 }
 
 .btn-atomic-tangerine {
-    background: #F3976C;
-    color: #FFFFFF!important;
+    background: #1daf36;
+    color: black!important;
 }
 
 .btn-atomic-tangerine:hover {
